make it fast predict

--- a/notebooks/AbDev.ipynb
+++ b/notebooks/AbDev.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 140,
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -447,7 +447,7 @@
        "[137 rows x 31 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "executionInfo": {
      "elapsed": 168,
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "executionInfo": {
      "elapsed": 188,
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "executionInfo": {
      "elapsed": 966,
@@ -611,48 +611,19 @@
    },
    "outputs": [],
    "source": [
-    "ACSINS_transformed,AS,BVP,CIC_transformed,CSI_transformed,ELISA,HIC,HEK,PSR,SGAC_transformed,SMAC_transformed,Tm =[],[],[],[],[],[],[],[],[],[],[],[]\n",
-    "\n",
-    "for index,row in dataset_test.iterrows():\n",
-    "\n",
-    "  feature_ACSINS = X_ACSINS[index]\n",
-    "  prediction_ACSINS = ACSINS_SVR_model.predict(feature_ACSINS.reshape(1,-1))\n",
-    "  feature_AS = X_AS[index]\n",
-    "  prediction_AS = AS_LR_model.predict(feature_AS.reshape(1,-1))\n",
-    "  feature_BVP = X_BVP[index]\n",
-    "  prediction_BVP = BVP_KNN_model.predict(feature_BVP.reshape(1,-1))\n",
-    "  feature_CIC = X_CIC[index]\n",
-    "  prediction_CIC = CIC_KNN_model.predict(feature_CIC.reshape(1,-1))\n",
-    "  feature_CSI = X_CSI[index]\n",
-    "  prediction_CSI = CSI_SVR_model.predict(feature_CSI.reshape(1,-1))\n",
-    "  feature_ELISA = X_ELISA[index]\n",
-    "  prediction_ELISA = ELISA_KNN_model.predict(feature_ELISA.reshape(1,-1))\n",
-    "  feature_HIC = X_HIC[index]\n",
-    "  prediction_HIC = HIC_SVR_model.predict(feature_HIC.reshape(1,-1))\n",
-    "  feature_HEK = X_HEK[index]\n",
-    "  prediction_HEK = HEK_KNN_model.predict(feature_HEK.reshape(1,-1))\n",
-    "  feature_PSR = X_PSR[index]\n",
-    "  prediction_PSR = PSR_SVR_model.predict(feature_PSR.reshape(1,-1))\n",
-    "  feature_SGAC = X_SGAC[index]\n",
-    "  prediction_SGAC = SGAC_SVR_model.predict(feature_SGAC.reshape(1,-1))\n",
-    "  feature_SMAC = X_SMAC[index]\n",
-    "  prediction_SMAC = SMAC_KNN_model.predict(feature_SMAC.reshape(1,-1))\n",
-    "  feature_Tm = X_Tm[index]\n",
-    "  prediction_Tm = Tm_KNN_model.predict(feature_Tm.reshape(1,-1))\n",
-    "\n",
-    "  ACSINS_transformed.append(prediction_ACSINS)\n",
-    "  AS.append(prediction_AS)\n",
-    "  BVP.append(prediction_BVP)\n",
-    "  CIC_transformed.append(prediction_CIC)\n",
-    "  CSI_transformed.append(prediction_CSI)\n",
-    "  ELISA.append(prediction_ELISA)\n",
-    "  HIC.append(prediction_HIC)\n",
-    "  HEK.append(prediction_HEK)\n",
-    "  PSR.append(prediction_PSR)\n",
-    "  SGAC_transformed.append(prediction_SGAC)\n",
-    "  SMAC_transformed.append(prediction_SMAC)\n",
-    "  Tm.append(prediction_Tm)\n",
-    "\n"
+    "# 모든 예측을 한 번에 수행\n",
+    "ACSINS_transformed = ACSINS_SVR_model.predict(X_ACSINS)\n",
+    "AS = AS_LR_model.predict(X_AS)\n",
+    "BVP = BVP_KNN_model.predict(X_BVP)\n",
+    "CIC_transformed = CIC_KNN_model.predict(X_CIC)\n",
+    "CSI_transformed = CSI_SVR_model.predict(X_CSI)\n",
+    "ELISA = ELISA_KNN_model.predict(X_ELISA)\n",
+    "HIC = HIC_SVR_model.predict(X_HIC)\n",
+    "HEK = HEK_KNN_model.predict(X_HEK)\n",
+    "PSR = PSR_SVR_model.predict(X_PSR)\n",
+    "SGAC_transformed = SGAC_SVR_model.predict(X_SGAC)\n",
+    "SMAC_transformed = SMAC_KNN_model.predict(X_SMAC)\n",
+    "Tm = Tm_KNN_model.predict(X_Tm)\n"
    ]
   },
   {
@@ -664,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {
     "executionInfo": {
      "elapsed": 174,
@@ -685,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "executionInfo": {
      "elapsed": 189,
@@ -708,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +943,7 @@
        "[137 rows x 13 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +964,7 @@
        "(137, 13)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1069,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1093,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "default",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
