Refactor train.py for improved readability and maintainability
- Reformatted feature selection for clarity by using multi-line lists.
- Updated model loading paths to use consistent double quotes.
- Simplified the initialization of prediction lists using tuple unpacking.
- Enhanced the formatting of the result sheet generation for better readability.

--- a/notebooks/AbDev.ipynb
+++ b/notebooks/AbDev.ipynb
@@ -453,7 +453,7 @@
     }
    ],
    "source": [
-    "dataset_test = pd.read_csv('../data/example/SAPSCM.csv')\n",
+    "dataset_test = pd.read_csv(\"../data/example/SAPSCM.csv\")\n",
     "dataset_test"
    ]
   },
@@ -482,18 +482,36 @@
    },
    "outputs": [],
    "source": [
-    "feature_ACSINS = dataset_test[['SAP_pos_CDRH1', 'SAP_pos_CDRL3', 'SCM_pos_CDRH1','SCM_neg_CDR']]\n",
-    "feature_AS = dataset_test[['SAP_pos_CDRH2','SCM_pos_CDRL2','SCM_pos_CDRL3','SCM_neg_CDRL3']]\n",
-    "feature_BVP = dataset_test[['SAP_pos_CDRH1','SAP_pos_CDRH3','SCM_pos_CDR','SCM_neg_CDRH3']]\n",
-    "feature_CIC = dataset_test[['SAP_pos_CDRL2', 'SAP_pos_CDRL3', 'SAP_pos_Lv','SCM_neg_CDR']]\n",
-    "feature_CSI = dataset_test[['SAP_pos_CDRL1', 'SAP_pos_Lv', 'SCM_pos_CDRH2','SCM_neg_CDRL2']]\n",
-    "feature_ELISA = dataset_test[['SAP_pos_CDRH3', 'SCM_pos_CDR','SCM_neg_CDR']]\n",
-    "feature_HIC = dataset_test[['SAP_pos_CDRL3', 'SAP_pos_CDR','SAP_pos_Hv','SCM_pos_CDRH3']]\n",
-    "feature_HEK = dataset_test[['SAP_pos_CDRH2','SAP_pos_CDRL3','SCM_pos_Lv','SCM_neg_Lv']]\n",
-    "feature_PSR = dataset_test[['SAP_pos_Lv', 'SCM_pos_CDRH2', 'SCM_neg_CDRL2']]\n",
-    "feature_SGAC = dataset_test[['SAP_pos_CDRH1', 'SAP_pos_CDRL3', 'SCM_neg_CDRH2','SCM_neg_Lv']]\n",
-    "feature_SMAC = dataset_test[['SAP_pos_CDR', 'SAP_pos_Fv', 'SCM_neg_CDRL2','SCM_neg_Fv']]\n",
-    "feature_Tm = dataset_test[['SAP_pos_CDRH1', 'SAP_pos_CDRH2', 'SCM_pos_CDRH3']]\n"
+    "feature_ACSINS = dataset_test[\n",
+    "    [\"SAP_pos_CDRH1\", \"SAP_pos_CDRL3\", \"SCM_pos_CDRH1\", \"SCM_neg_CDR\"]\n",
+    "]\n",
+    "feature_AS = dataset_test[\n",
+    "    [\"SAP_pos_CDRH2\", \"SCM_pos_CDRL2\", \"SCM_pos_CDRL3\", \"SCM_neg_CDRL3\"]\n",
+    "]\n",
+    "feature_BVP = dataset_test[\n",
+    "    [\"SAP_pos_CDRH1\", \"SAP_pos_CDRH3\", \"SCM_pos_CDR\", \"SCM_neg_CDRH3\"]\n",
+    "]\n",
+    "feature_CIC = dataset_test[\n",
+    "    [\"SAP_pos_CDRL2\", \"SAP_pos_CDRL3\", \"SAP_pos_Lv\", \"SCM_neg_CDR\"]\n",
+    "]\n",
+    "feature_CSI = dataset_test[\n",
+    "    [\"SAP_pos_CDRL1\", \"SAP_pos_Lv\", \"SCM_pos_CDRH2\", \"SCM_neg_CDRL2\"]\n",
+    "]\n",
+    "feature_ELISA = dataset_test[[\"SAP_pos_CDRH3\", \"SCM_pos_CDR\", \"SCM_neg_CDR\"]]\n",
+    "feature_HIC = dataset_test[\n",
+    "    [\"SAP_pos_CDRL3\", \"SAP_pos_CDR\", \"SAP_pos_Hv\", \"SCM_pos_CDRH3\"]\n",
+    "]\n",
+    "feature_HEK = dataset_test[\n",
+    "    [\"SAP_pos_CDRH2\", \"SAP_pos_CDRL3\", \"SCM_pos_Lv\", \"SCM_neg_Lv\"]\n",
+    "]\n",
+    "feature_PSR = dataset_test[[\"SAP_pos_Lv\", \"SCM_pos_CDRH2\", \"SCM_neg_CDRL2\"]]\n",
+    "feature_SGAC = dataset_test[\n",
+    "    [\"SAP_pos_CDRH1\", \"SAP_pos_CDRL3\", \"SCM_neg_CDRH2\", \"SCM_neg_Lv\"]\n",
+    "]\n",
+    "feature_SMAC = dataset_test[\n",
+    "    [\"SAP_pos_CDR\", \"SAP_pos_Fv\", \"SCM_neg_CDRL2\", \"SCM_neg_Fv\"]\n",
+    "]\n",
+    "feature_Tm = dataset_test[[\"SAP_pos_CDRH1\", \"SAP_pos_CDRH2\", \"SCM_pos_CDRH3\"]]"
    ]
   },
   {
@@ -572,18 +590,18 @@
     }
    ],
    "source": [
-    "ACSINS_SVR_model = joblib.load('../models/Trained_model/ACSINS_SVR_model.joblib')\n",
-    "AS_LR_model = joblib.load('../models/Trained_model/AS_LR_model.joblib')\n",
-    "BVP_KNN_model = joblib.load('../models/Trained_model/BVP_KNN_model.joblib')\n",
-    "CIC_KNN_model = joblib.load('../models/Trained_model/CIC_KNN_model.joblib')\n",
-    "CSI_SVR_model = joblib.load('../models/Trained_model/CSI_SVR_model.joblib')\n",
-    "ELISA_KNN_model = joblib.load('../models/Trained_model/ELISA_KNN_model.joblib')\n",
-    "HEK_KNN_model = joblib.load('../models/Trained_model/HEK_KNN_model.joblib')\n",
-    "HIC_SVR_model = joblib.load('../models/Trained_model/HIC_SVR_model.joblib')\n",
-    "PSR_SVR_model = joblib.load('../models/Trained_model/PSR_SVR_model.joblib')\n",
-    "SGAC_SVR_model = joblib.load('../models/Trained_model/SGAC_SVR_model.joblib')\n",
-    "SMAC_KNN_model = joblib.load('../models/Trained_model/SMAC_KNN_model.joblib')\n",
-    "Tm_KNN_model = joblib.load('../models/Trained_model/Tm_KNN_model.joblib')"
+    "ACSINS_SVR_model = joblib.load(\"../models/Trained_model/ACSINS_SVR_model.joblib\")\n",
+    "AS_LR_model = joblib.load(\"../models/Trained_model/AS_LR_model.joblib\")\n",
+    "BVP_KNN_model = joblib.load(\"../models/Trained_model/BVP_KNN_model.joblib\")\n",
+    "CIC_KNN_model = joblib.load(\"../models/Trained_model/CIC_KNN_model.joblib\")\n",
+    "CSI_SVR_model = joblib.load(\"../models/Trained_model/CSI_SVR_model.joblib\")\n",
+    "ELISA_KNN_model = joblib.load(\"../models/Trained_model/ELISA_KNN_model.joblib\")\n",
+    "HEK_KNN_model = joblib.load(\"../models/Trained_model/HEK_KNN_model.joblib\")\n",
+    "HIC_SVR_model = joblib.load(\"../models/Trained_model/HIC_SVR_model.joblib\")\n",
+    "PSR_SVR_model = joblib.load(\"../models/Trained_model/PSR_SVR_model.joblib\")\n",
+    "SGAC_SVR_model = joblib.load(\"../models/Trained_model/SGAC_SVR_model.joblib\")\n",
+    "SMAC_KNN_model = joblib.load(\"../models/Trained_model/SMAC_KNN_model.joblib\")\n",
+    "Tm_KNN_model = joblib.load(\"../models/Trained_model/Tm_KNN_model.joblib\")"
    ]
   },
   {
@@ -623,7 +641,7 @@
     "PSR = PSR_SVR_model.predict(X_PSR)\n",
     "SGAC_transformed = SGAC_SVR_model.predict(X_SGAC)\n",
     "SMAC_transformed = SMAC_KNN_model.predict(X_SMAC)\n",
-    "Tm = Tm_KNN_model.predict(X_Tm)\n"
+    "Tm = Tm_KNN_model.predict(X_Tm)"
    ]
   },
   {
@@ -651,7 +669,7 @@
    },
    "outputs": [],
    "source": [
-    "Name = dataset_test[['Name']].to_numpy()"
+    "Name = dataset_test[[\"Name\"]].to_numpy()"
    ]
   },
   {
@@ -672,9 +690,32 @@
    },
    "outputs": [],
    "source": [
-    "data = np.column_stack((Name,ACSINS_transformed,AS,BVP,CIC_transformed,CSI_transformed,ELISA,HIC,HEK,PSR,SGAC_transformed,SMAC_transformed,Tm))\n",
+    "data = np.column_stack(\n",
+    "    (\n",
+    "        Name,\n",
+    "        ACSINS_transformed,\n",
+    "        AS,\n",
+    "        BVP,\n",
+    "        CIC_transformed,\n",
+    "        CSI_transformed,\n",
+    "        ELISA,\n",
+    "        HIC,\n",
+    "        HEK,\n",
+    "        PSR,\n",
+    "        SGAC_transformed,\n",
+    "        SMAC_transformed,\n",
+    "        Tm,\n",
+    "    )\n",
+    ")\n",
     "\n",
-    "np.savetxt('../data/example/Prediction_Result.csv', data, delimiter=',', fmt='%s', header='Name,ACSINS_transformed,AS,BVP,CIC_transformed,CSI_transformed,ELISA,HIC,HEK,PSR,SGAC_transformed,SMAC_transformed,Tm', comments='')\n"
+    "np.savetxt(\n",
+    "    \"../data/example/Prediction_Result.csv\",\n",
+    "    data,\n",
+    "    delimiter=\",\",\n",
+    "    fmt=\"%s\",\n",
+    "    header=\"Name,ACSINS_transformed,AS,BVP,CIC_transformed,CSI_transformed,ELISA,HIC,HEK,PSR,SGAC_transformed,SMAC_transformed,Tm\",\n",
+    "    comments=\"\",\n",
+    ")"
    ]
   },
   {
@@ -949,7 +990,7 @@
     }
    ],
    "source": [
-    "Result = pd.read_csv('../data/example/Prediction_Result.csv')\n",
+    "Result = pd.read_csv(\"../data/example/Prediction_Result.csv\")\n",
     "Result"
    ]
   },
@@ -1009,16 +1050,26 @@
     "# 2. PairGrid를 생성합니다.\n",
     "# x_vars: 그래프의 열(x축)이 될 변수들 (모든 수치형 특성)\n",
     "# y_vars: 그래프의 행(y축)이 될 변수 ('Name')\n",
-    "x_vars = df.columns.drop('Name').tolist()\n",
+    "x_vars = df.columns.drop(\"Name\").tolist()\n",
     "\n",
-    "g = sns.PairGrid(df.sort_values(\"Tm\", ascending=False), # 'Tm' 값을 기준으로 정렬\n",
-    "                 x_vars=x_vars,\n",
-    "                 y_vars=[\"Name\"],\n",
-    "                 height=20, aspect=.15)\n",
+    "g = sns.PairGrid(\n",
+    "    df.sort_values(\"Tm\", ascending=False),  # 'Tm' 값을 기준으로 정렬\n",
+    "    x_vars=x_vars,\n",
+    "    y_vars=[\"Name\"],\n",
+    "    height=20,\n",
+    "    aspect=0.15,\n",
+    ")\n",
     "\n",
     "# 3. stripplot(dot plot)을 그립니다.\n",
-    "g.map(sns.stripplot, size=10, orient=\"h\", jitter=False,\n",
-    "      palette=\"flare_r\", linewidth=1, edgecolor=\"w\")\n",
+    "g.map(\n",
+    "    sns.stripplot,\n",
+    "    size=10,\n",
+    "    orient=\"h\",\n",
+    "    jitter=False,\n",
+    "    palette=\"flare_r\",\n",
+    "    linewidth=1,\n",
+    "    edgecolor=\"w\",\n",
+    ")\n",
     "\n",
     "# 4. 공통 X축 레이블과 Y축 레이블을 설정합니다.\n",
     "g.set(xlabel=\"Value\", ylabel=\"\")\n",
@@ -1061,9 +1112,16 @@
     "# 3. 각 셀을 크기와 색상이 다른 산점도로 그립니다.\n",
     "g = sns.relplot(\n",
     "    data=corr_mat,\n",
-    "    x=\"level_0\", y=\"level_1\", hue=\"correlation\", size=\"correlation\",\n",
-    "    palette=\"vlag\", hue_norm=(-1, 1), edgecolor=\".7\",\n",
-    "    height=6, sizes=(25, 150), size_norm=(-.2, .8),\n",
+    "    x=\"level_0\",\n",
+    "    y=\"level_1\",\n",
+    "    hue=\"correlation\",\n",
+    "    size=\"correlation\",\n",
+    "    palette=\"vlag\",\n",
+    "    hue_norm=(-1, 1),\n",
+    "    edgecolor=\".7\",\n",
+    "    height=6,\n",
+    "    sizes=(25, 150),\n",
+    "    size_norm=(-0.2, 0.8),\n",
     ")\n",
     "\n",
     "# 4. 그림을 최종적으로 다듬습니다.\n",
@@ -1093,7 +1151,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "default",
    "language": "python",
    "name": "python3"
   },
