--- a/notebooks/AbDev_trained.ipynb
+++ b/notebooks/AbDev_trained.ipynb
@@ -28,7 +28,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.linear_model import LinearRegression\n",
@@ -62,18 +61,18 @@
    },
    "outputs": [],
    "source": [
-    "dataset_ACSINS = pd.read_csv('../data/ACSINS/DeepSP_Feature.csv')\n",
-    "dataset_AS = pd.read_csv('../data/AS/DeepSP_Feature.csv')\n",
-    "dataset_BVP = pd.read_csv('../data/BVP/DeepSP_Feature.csv')\n",
-    "dataset_CIC = pd.read_csv('../data/CIC/DeepSP_Feature.csv')\n",
-    "dataset_CSI = pd.read_csv('../data/CSI/DeepSP_Feature.csv')\n",
-    "dataset_ELISA = pd.read_csv('../data/ELISA/DeepSP_Feature.csv')\n",
-    "dataset_HIC = pd.read_csv('../data/HIC/DeepSP_Feature.csv')\n",
-    "dataset_HEK = pd.read_csv('../data/HEK/DeepSP_Feature.csv')\n",
-    "dataset_PSR = pd.read_csv('../data/PSR/DeepSP_Feature.csv')\n",
-    "dataset_SGAC = pd.read_csv('../data/SGAC/DeepSP_Feature.csv')\n",
-    "dataset_SMAC = pd.read_csv('../data/SMAC/DeepSP_Feature.csv')\n",
-    "dataset_Tm = pd.read_csv('../data/Tm/DeepSP_Feature.csv')"
+    "dataset_ACSINS = pd.read_csv(\"../data/ACSINS/DeepSP_Feature.csv\")\n",
+    "dataset_AS = pd.read_csv(\"../data/AS/DeepSP_Feature.csv\")\n",
+    "dataset_BVP = pd.read_csv(\"../data/BVP/DeepSP_Feature.csv\")\n",
+    "dataset_CIC = pd.read_csv(\"../data/CIC/DeepSP_Feature.csv\")\n",
+    "dataset_CSI = pd.read_csv(\"../data/CSI/DeepSP_Feature.csv\")\n",
+    "dataset_ELISA = pd.read_csv(\"../data/ELISA/DeepSP_Feature.csv\")\n",
+    "dataset_HIC = pd.read_csv(\"../data/HIC/DeepSP_Feature.csv\")\n",
+    "dataset_HEK = pd.read_csv(\"../data/HEK/DeepSP_Feature.csv\")\n",
+    "dataset_PSR = pd.read_csv(\"../data/PSR/DeepSP_Feature.csv\")\n",
+    "dataset_SGAC = pd.read_csv(\"../data/SGAC/DeepSP_Feature.csv\")\n",
+    "dataset_SMAC = pd.read_csv(\"../data/SMAC/DeepSP_Feature.csv\")\n",
+    "dataset_Tm = pd.read_csv(\"../data/Tm/DeepSP_Feature.csv\")"
    ]
   },
   {
@@ -94,18 +93,36 @@
    },
    "outputs": [],
    "source": [
-    "X_train_ACSINS = dataset_ACSINS[['SAP_pos_CDRH1', 'SAP_pos_CDRL3', 'SCM_pos_CDRH1','SCM_neg_CDR']]\n",
-    "X_train_AS = dataset_AS[['SAP_pos_CDRH2','SCM_pos_CDRL2','SCM_pos_CDRL3','SCM_neg_CDRL3']]\n",
-    "X_train_BVP = dataset_BVP[['SAP_pos_CDRH1','SAP_pos_CDRH3','SCM_pos_CDR','SCM_neg_CDRH3']]\n",
-    "X_train_CIC = dataset_CIC[['SAP_pos_CDRL2', 'SAP_pos_CDRL3', 'SAP_pos_Lv','SCM_neg_CDR']]\n",
-    "X_train_CSI = dataset_CSI[['SAP_pos_CDRL1', 'SAP_pos_Lv', 'SCM_pos_CDRH2','SCM_neg_CDRL2']]\n",
-    "X_train_ELISA = dataset_ELISA[['SAP_pos_CDRH3', 'SCM_pos_CDR','SCM_neg_CDR']]\n",
-    "X_train_HIC = dataset_HIC[['SAP_pos_CDRL3', 'SAP_pos_CDR','SAP_pos_Hv','SCM_pos_CDRH3']]\n",
-    "X_train_HEK = dataset_HEK[['SAP_pos_CDRH2','SAP_pos_CDRL3','SCM_pos_Lv','SCM_neg_Lv']]\n",
-    "X_train_PSR = dataset_PSR[['SAP_pos_Lv', 'SCM_pos_CDRH2', 'SCM_neg_CDRL2']]\n",
-    "X_train_SGAC = dataset_SGAC[['SAP_pos_CDRH1', 'SAP_pos_CDRL3', 'SCM_neg_CDRH2','SCM_neg_Lv']]\n",
-    "X_train_SMAC = dataset_SMAC[['SAP_pos_CDR', 'SAP_pos_Fv', 'SCM_neg_CDRL2','SCM_neg_Fv']]\n",
-    "X_train_Tm = dataset_Tm[['SAP_pos_CDRH1', 'SAP_pos_CDRH2', 'SCM_pos_CDRH3']]\n"
+    "X_train_ACSINS = dataset_ACSINS[\n",
+    "    [\"SAP_pos_CDRH1\", \"SAP_pos_CDRL3\", \"SCM_pos_CDRH1\", \"SCM_neg_CDR\"]\n",
+    "]\n",
+    "X_train_AS = dataset_AS[\n",
+    "    [\"SAP_pos_CDRH2\", \"SCM_pos_CDRL2\", \"SCM_pos_CDRL3\", \"SCM_neg_CDRL3\"]\n",
+    "]\n",
+    "X_train_BVP = dataset_BVP[\n",
+    "    [\"SAP_pos_CDRH1\", \"SAP_pos_CDRH3\", \"SCM_pos_CDR\", \"SCM_neg_CDRH3\"]\n",
+    "]\n",
+    "X_train_CIC = dataset_CIC[\n",
+    "    [\"SAP_pos_CDRL2\", \"SAP_pos_CDRL3\", \"SAP_pos_Lv\", \"SCM_neg_CDR\"]\n",
+    "]\n",
+    "X_train_CSI = dataset_CSI[\n",
+    "    [\"SAP_pos_CDRL1\", \"SAP_pos_Lv\", \"SCM_pos_CDRH2\", \"SCM_neg_CDRL2\"]\n",
+    "]\n",
+    "X_train_ELISA = dataset_ELISA[[\"SAP_pos_CDRH3\", \"SCM_pos_CDR\", \"SCM_neg_CDR\"]]\n",
+    "X_train_HIC = dataset_HIC[\n",
+    "    [\"SAP_pos_CDRL3\", \"SAP_pos_CDR\", \"SAP_pos_Hv\", \"SCM_pos_CDRH3\"]\n",
+    "]\n",
+    "X_train_HEK = dataset_HEK[\n",
+    "    [\"SAP_pos_CDRH2\", \"SAP_pos_CDRL3\", \"SCM_pos_Lv\", \"SCM_neg_Lv\"]\n",
+    "]\n",
+    "X_train_PSR = dataset_PSR[[\"SAP_pos_Lv\", \"SCM_pos_CDRH2\", \"SCM_neg_CDRL2\"]]\n",
+    "X_train_SGAC = dataset_SGAC[\n",
+    "    [\"SAP_pos_CDRH1\", \"SAP_pos_CDRL3\", \"SCM_neg_CDRH2\", \"SCM_neg_Lv\"]\n",
+    "]\n",
+    "X_train_SMAC = dataset_SMAC[\n",
+    "    [\"SAP_pos_CDR\", \"SAP_pos_Fv\", \"SCM_neg_CDRL2\", \"SCM_neg_Fv\"]\n",
+    "]\n",
+    "X_train_Tm = dataset_Tm[[\"SAP_pos_CDRH1\", \"SAP_pos_CDRH2\", \"SCM_pos_CDRH3\"]]"
    ]
   },
   {
@@ -145,7 +162,7 @@
     "X_train_PSR = sc.fit_transform(X_train_PSR)\n",
     "X_train_SGAC = sc.fit_transform(X_train_SGAC)\n",
     "X_train_SMAC = sc.fit_transform(X_train_SMAC)\n",
-    "X_train_Tm = sc.fit_transform(X_train_Tm)\n"
+    "X_train_Tm = sc.fit_transform(X_train_Tm)"
    ]
   },
   {
@@ -166,18 +183,18 @@
    },
    "outputs": [],
    "source": [
-    "y_train_ACSINS = dataset_ACSINS['ACSINS']\n",
-    "y_train_AS = dataset_AS['AS']\n",
-    "y_train_BVP = dataset_BVP['BVP']\n",
-    "y_train_CIC = dataset_CIC['CIC']\n",
-    "y_train_CSI = dataset_CSI['CSI']\n",
-    "y_train_ELISA = dataset_ELISA['ELISA']\n",
-    "y_train_HIC = dataset_HIC['HIC']\n",
-    "y_train_HEK = dataset_HEK['HEK']\n",
-    "y_train_PSR = dataset_PSR['PSR']\n",
-    "y_train_SGAC = dataset_SGAC['SGACSTD']\n",
-    "y_train_SMAC = dataset_SMAC['SMAC_nor']\n",
-    "y_train_Tm = dataset_Tm['Tm']"
+    "y_train_ACSINS = dataset_ACSINS[\"ACSINS\"]\n",
+    "y_train_AS = dataset_AS[\"AS\"]\n",
+    "y_train_BVP = dataset_BVP[\"BVP\"]\n",
+    "y_train_CIC = dataset_CIC[\"CIC\"]\n",
+    "y_train_CSI = dataset_CSI[\"CSI\"]\n",
+    "y_train_ELISA = dataset_ELISA[\"ELISA\"]\n",
+    "y_train_HIC = dataset_HIC[\"HIC\"]\n",
+    "y_train_HEK = dataset_HEK[\"HEK\"]\n",
+    "y_train_PSR = dataset_PSR[\"PSR\"]\n",
+    "y_train_SGAC = dataset_SGAC[\"SGACSTD\"]\n",
+    "y_train_SMAC = dataset_SMAC[\"SMAC_nor\"]\n",
+    "y_train_Tm = dataset_Tm[\"Tm\"]"
    ]
   },
   {
@@ -227,15 +244,16 @@
    ],
    "source": [
     "from sklearn.svm import SVR\n",
-    "SVR_ACSINS = SVR(C=3.5, epsilon=0.1, kernel='rbf', gamma='scale')\n",
-    "SVR_ACSINS.fit(X_train_ACSINS,y_train_ACSINS)\n",
+    "\n",
+    "SVR_ACSINS = SVR(C=3.5, epsilon=0.1, kernel=\"rbf\", gamma=\"scale\")\n",
+    "SVR_ACSINS.fit(X_train_ACSINS, y_train_ACSINS)\n",
     "y_pred_ACSINS = SVR_ACSINS.predict(X_train_ACSINS)\n",
     "r2_ACSINS = r2_score(y_train_ACSINS, y_pred_ACSINS)\n",
     "r_ACSINS = sqrt(r2_ACSINS)\n",
     "MSE_ACSINS = mean_squared_error(y_train_ACSINS, y_pred_ACSINS)\n",
     "RMSE_ACSINS = sqrt(MSE_ACSINS)\n",
-    "MAE_ACSINS = mean_squared_error(y_train_ACSINS,y_pred_ACSINS)\n",
-    "print(r_ACSINS,MSE_ACSINS)"
+    "MAE_ACSINS = mean_squared_error(y_train_ACSINS, y_pred_ACSINS)\n",
+    "print(r_ACSINS, MSE_ACSINS)"
    ]
   },
   {
@@ -278,14 +296,14 @@
    ],
    "source": [
     "lr_AS = LinearRegression()\n",
-    "lr_AS.fit(X_train_AS,y_train_AS)\n",
+    "lr_AS.fit(X_train_AS, y_train_AS)\n",
     "y_pred_AS = lr_AS.predict(X_train_AS)\n",
     "r2_AS = r2_score(y_train_AS, y_pred_AS)\n",
     "r_AS = sqrt(r2_AS)\n",
     "MSE_AS = mean_squared_error(y_train_AS, y_pred_AS)\n",
     "RMSE_AS = sqrt(MSE_AS)\n",
-    "MAE_AS = mean_squared_error(y_train_AS,y_pred_AS)\n",
-    "print(r_AS,MSE_AS)"
+    "MAE_AS = mean_squared_error(y_train_AS, y_pred_AS)\n",
+    "print(r_AS, MSE_AS)"
    ]
   },
   {
@@ -334,8 +352,8 @@
     "r_BVP = sqrt(r2_BVP)\n",
     "MSE_BVP = mean_squared_error(y_train_BVP, y_pred_BVP)\n",
     "RMSE_BVP = sqrt(MSE_BVP)\n",
-    "MAE_BVP = mean_squared_error(y_train_BVP,y_pred_BVP)\n",
-    "print(r_BVP,MSE_BVP)"
+    "MAE_BVP = mean_squared_error(y_train_BVP, y_pred_BVP)\n",
+    "print(r_BVP, MSE_BVP)"
    ]
   },
   {
@@ -378,14 +396,14 @@
    ],
    "source": [
     "KNN_CIC = KNeighborsRegressor(n_neighbors=6)\n",
-    "KNN_CIC.fit(X_train_CIC,y_train_CIC)\n",
+    "KNN_CIC.fit(X_train_CIC, y_train_CIC)\n",
     "y_pred_CIC = KNN_CIC.predict(X_train_CIC)\n",
     "r2_CIC = r2_score(y_train_CIC, y_pred_CIC)\n",
     "r_CIC = sqrt(r2_CIC)\n",
     "MSE_CIC = mean_squared_error(y_train_CIC, y_pred_CIC)\n",
     "RMSE_CIC = sqrt(MSE_CIC)\n",
-    "MAE_CIC = mean_squared_error(y_train_CIC,y_pred_CIC)\n",
-    "print(r_CIC,MSE_CIC)"
+    "MAE_CIC = mean_squared_error(y_train_CIC, y_pred_CIC)\n",
+    "print(r_CIC, MSE_CIC)"
    ]
   },
   {
@@ -428,15 +446,16 @@
    ],
    "source": [
     "from sklearn.svm import SVR\n",
-    "SVR_CSI = SVR(C=1.0, epsilon=0.2, kernel='rbf', gamma='scale')\n",
-    "SVR_CSI.fit(X_train_CSI,y_train_CSI)\n",
+    "\n",
+    "SVR_CSI = SVR(C=1.0, epsilon=0.2, kernel=\"rbf\", gamma=\"scale\")\n",
+    "SVR_CSI.fit(X_train_CSI, y_train_CSI)\n",
     "y_pred_CSI = SVR_CSI.predict(X_train_CSI)\n",
     "r2_CSI = r2_score(y_train_CSI, y_pred_CSI)\n",
     "r_CSI = sqrt(r2_CSI)\n",
     "MSE_CSI = mean_squared_error(y_train_CSI, y_pred_CSI)\n",
     "RMSE_CSI = sqrt(MSE_CSI)\n",
-    "MAE_CSI = mean_squared_error(y_train_CSI,y_pred_CSI)\n",
-    "print(r_CSI,MSE_CSI)"
+    "MAE_CSI = mean_squared_error(y_train_CSI, y_pred_CSI)\n",
+    "print(r_CSI, MSE_CSI)"
    ]
   },
   {
@@ -479,14 +498,14 @@
    ],
    "source": [
     "KNN_ELISA = KNeighborsRegressor(n_neighbors=3)\n",
-    "KNN_ELISA.fit(X_train_ELISA,y_train_ELISA)\n",
+    "KNN_ELISA.fit(X_train_ELISA, y_train_ELISA)\n",
     "y_pred_ELISA = KNN_ELISA.predict(X_train_ELISA)\n",
     "r2_ELISA = r2_score(y_train_ELISA, y_pred_ELISA)\n",
     "r_ELISA = sqrt(r2_ELISA)\n",
     "MSE_ELISA = mean_squared_error(y_train_ELISA, y_pred_ELISA)\n",
     "RMSE_ELISA = sqrt(MSE_ELISA)\n",
-    "MAE_ELISA = mean_squared_error(y_train_ELISA,y_pred_ELISA)\n",
-    "print(r_ELISA,MSE_ELISA)"
+    "MAE_ELISA = mean_squared_error(y_train_ELISA, y_pred_ELISA)\n",
+    "print(r_ELISA, MSE_ELISA)"
    ]
   },
   {
@@ -529,15 +548,16 @@
    ],
    "source": [
     "from sklearn.svm import SVR\n",
-    "SVR_HIC = SVR(C=2.0, epsilon=0.01, kernel='rbf', gamma='scale')\n",
-    "SVR_HIC.fit(X_train_HIC,y_train_HIC)\n",
+    "\n",
+    "SVR_HIC = SVR(C=2.0, epsilon=0.01, kernel=\"rbf\", gamma=\"scale\")\n",
+    "SVR_HIC.fit(X_train_HIC, y_train_HIC)\n",
     "y_pred_HIC = SVR_HIC.predict(X_train_HIC)\n",
     "r2_HIC = r2_score(y_train_HIC, y_pred_HIC)\n",
     "r_HIC = sqrt(r2_HIC)\n",
     "MSE_HIC = mean_squared_error(y_train_HIC, y_pred_HIC)\n",
     "RMSE_HIC = sqrt(MSE_HIC)\n",
-    "MAE_HIC = mean_squared_error(y_train_HIC,y_pred_HIC)\n",
-    "print(r_HIC,MSE_HIC)"
+    "MAE_HIC = mean_squared_error(y_train_HIC, y_pred_HIC)\n",
+    "print(r_HIC, MSE_HIC)"
    ]
   },
   {
@@ -580,14 +600,14 @@
    ],
    "source": [
     "KNN_HEK = KNeighborsRegressor(n_neighbors=5)\n",
-    "KNN_HEK.fit(X_train_HEK,y_train_HEK)\n",
+    "KNN_HEK.fit(X_train_HEK, y_train_HEK)\n",
     "y_pred_HEK = KNN_HEK.predict(X_train_HEK)\n",
     "r2_HEK = r2_score(y_train_HEK, y_pred_HEK)\n",
     "r_HEK = sqrt(r2_HEK)\n",
     "MSE_HEK = mean_squared_error(y_train_HEK, y_pred_HEK)\n",
     "RMSE_HEK = sqrt(MSE_HEK)\n",
-    "MAE_HEK = mean_squared_error(y_train_HEK,y_pred_HEK)\n",
-    "print(r_HEK,MSE_HEK)"
+    "MAE_HEK = mean_squared_error(y_train_HEK, y_pred_HEK)\n",
+    "print(r_HEK, MSE_HEK)"
    ]
   },
   {
@@ -630,15 +650,16 @@
    ],
    "source": [
     "from sklearn.svm import SVR\n",
-    "SVR_PSR = SVR(C=0.4, epsilon=0.1, kernel='rbf', gamma='scale')\n",
-    "SVR_PSR.fit(X_train_PSR,y_train_PSR)\n",
+    "\n",
+    "SVR_PSR = SVR(C=0.4, epsilon=0.1, kernel=\"rbf\", gamma=\"scale\")\n",
+    "SVR_PSR.fit(X_train_PSR, y_train_PSR)\n",
     "y_pred_PSR = SVR_PSR.predict(X_train_PSR)\n",
     "r2_PSR = r2_score(y_train_PSR, y_pred_PSR)\n",
     "r_PSR = sqrt(r2_PSR)\n",
     "MSE_PSR = mean_squared_error(y_train_PSR, y_pred_PSR)\n",
     "RMSE_PSR = sqrt(MSE_PSR)\n",
-    "MAE_PSR = mean_squared_error(y_train_PSR,y_pred_PSR)\n",
-    "print(r_PSR,MSE_PSR)"
+    "MAE_PSR = mean_squared_error(y_train_PSR, y_pred_PSR)\n",
+    "print(r_PSR, MSE_PSR)"
    ]
   },
   {
@@ -681,15 +702,16 @@
    ],
    "source": [
     "from sklearn.svm import SVR\n",
-    "SVR_SGAC = SVR(C=3.0, epsilon=0.3, kernel='rbf', gamma='scale')\n",
-    "SVR_SGAC.fit(X_train_SGAC,y_train_SGAC)\n",
+    "\n",
+    "SVR_SGAC = SVR(C=3.0, epsilon=0.3, kernel=\"rbf\", gamma=\"scale\")\n",
+    "SVR_SGAC.fit(X_train_SGAC, y_train_SGAC)\n",
     "y_pred_SGAC = SVR_SGAC.predict(X_train_SGAC)\n",
     "r2_SGAC = r2_score(y_train_SGAC, y_pred_SGAC)\n",
     "r_SGAC = sqrt(r2_SGAC)\n",
     "MSE_SGAC = mean_squared_error(y_train_SGAC, y_pred_SGAC)\n",
     "RMSE_SGAC = sqrt(MSE_SGAC)\n",
-    "MAE_SGAC = mean_squared_error(y_train_SGAC,y_pred_SGAC)\n",
-    "print(r_SGAC,MSE_SGAC)"
+    "MAE_SGAC = mean_squared_error(y_train_SGAC, y_pred_SGAC)\n",
+    "print(r_SGAC, MSE_SGAC)"
    ]
   },
   {
@@ -732,14 +754,14 @@
    ],
    "source": [
     "KNN_SMAC = KNeighborsRegressor(n_neighbors=6)\n",
-    "KNN_SMAC.fit(X_train_SMAC,y_train_SMAC)\n",
+    "KNN_SMAC.fit(X_train_SMAC, y_train_SMAC)\n",
     "y_pred_SMAC = KNN_SMAC.predict(X_train_SMAC)\n",
     "r2_SMAC = r2_score(y_train_SMAC, y_pred_SMAC)\n",
     "r_SMAC = sqrt(r2_SMAC)\n",
     "MSE_SMAC = mean_squared_error(y_train_SMAC, y_pred_SMAC)\n",
     "RMSE_SMAC = sqrt(MSE_SMAC)\n",
-    "MAE_SMAC = mean_squared_error(y_train_SMAC,y_pred_SMAC)\n",
-    "print(r_SMAC,MSE_SMAC)"
+    "MAE_SMAC = mean_squared_error(y_train_SMAC, y_pred_SMAC)\n",
+    "print(r_SMAC, MSE_SMAC)"
    ]
   },
   {
@@ -782,14 +804,14 @@
    ],
    "source": [
     "KNN_Tm = KNeighborsRegressor(n_neighbors=6)\n",
-    "KNN_Tm.fit(X_train_Tm,y_train_Tm)\n",
+    "KNN_Tm.fit(X_train_Tm, y_train_Tm)\n",
     "y_pred_Tm = KNN_Tm.predict(X_train_Tm)\n",
     "r2_Tm = r2_score(y_train_Tm, y_pred_Tm)\n",
     "r_Tm = sqrt(r2_Tm)\n",
     "MSE_Tm = mean_squared_error(y_train_Tm, y_pred_Tm)\n",
     "RMSE_Tm = sqrt(MSE_Tm)\n",
-    "MAE_Tm = mean_squared_error(y_train_Tm,y_pred_Tm)\n",
-    "print(r_Tm,MSE_Tm)"
+    "MAE_Tm = mean_squared_error(y_train_Tm, y_pred_Tm)\n",
+    "print(r_Tm, MSE_Tm)"
    ]
   },
   {
@@ -816,18 +838,18 @@
     }
    ],
    "source": [
-    "joblib.dump(SVR_ACSINS, '../models/Trained_model/ACSINS_SVR_model.joblib')\n",
-    "joblib.dump(lr_AS, '../models/Trained_model/AS_LR_model.joblib')\n",
-    "joblib.dump(KNN_BVP, '../models/Trained_model/BVP_KNN_model.joblib')\n",
-    "joblib.dump(KNN_CIC, '../models/Trained_model/CIC_KNN_model.joblib')\n",
-    "joblib.dump(SVR_CSI, '../models/Trained_model/CSI_SVR_model.joblib')\n",
-    "joblib.dump(KNN_ELISA, '../models/Trained_model/ELISA_KNN_model.joblib')\n",
-    "joblib.dump(KNN_HEK, '../models/Trained_model/HEK_KNN_model.joblib')\n",
-    "joblib.dump(SVR_HIC, '../models/Trained_model/HIC_SVR_model.joblib')\n",
-    "joblib.dump(SVR_PSR, '../models/Trained_model/PSR_SVR_model.joblib')\n",
-    "joblib.dump(SVR_SGAC, '../models/Trained_model/SGAC_SVR_model.joblib')\n",
-    "joblib.dump(KNN_SMAC, '../models/Trained_model/SMAC_KNN_model.joblib')\n",
-    "joblib.dump(KNN_Tm, '../models/Trained_model/Tm_KNN_model.joblib')"
+    "joblib.dump(SVR_ACSINS, \"../models/Trained_model/ACSINS_SVR_model.joblib\")\n",
+    "joblib.dump(lr_AS, \"../models/Trained_model/AS_LR_model.joblib\")\n",
+    "joblib.dump(KNN_BVP, \"../models/Trained_model/BVP_KNN_model.joblib\")\n",
+    "joblib.dump(KNN_CIC, \"../models/Trained_model/CIC_KNN_model.joblib\")\n",
+    "joblib.dump(SVR_CSI, \"../models/Trained_model/CSI_SVR_model.joblib\")\n",
+    "joblib.dump(KNN_ELISA, \"../models/Trained_model/ELISA_KNN_model.joblib\")\n",
+    "joblib.dump(KNN_HEK, \"../models/Trained_model/HEK_KNN_model.joblib\")\n",
+    "joblib.dump(SVR_HIC, \"../models/Trained_model/HIC_SVR_model.joblib\")\n",
+    "joblib.dump(SVR_PSR, \"../models/Trained_model/PSR_SVR_model.joblib\")\n",
+    "joblib.dump(SVR_SGAC, \"../models/Trained_model/SGAC_SVR_model.joblib\")\n",
+    "joblib.dump(KNN_SMAC, \"../models/Trained_model/SMAC_KNN_model.joblib\")\n",
+    "joblib.dump(KNN_Tm, \"../models/Trained_model/Tm_KNN_model.joblib\")"
    ]
   }
  ],
